@@ -74,6 +74,9 @@ as suggested by Kurt Hindenburg.</li>
 
 Bugfixes:
 <ul>
+<li>Make <a href="#cmdline-debug">--debug</a> option use the logging
+functionality in addition to outputting to stdout, as suggested by Kurt
+Hindenburg.</li>
 <li>Add a signal handler for SIGPIPE to keep the script from leaving lockfiles
 around after piping the output into less.</li>
 <li>Silence warnings when the script informs you that you need to create a
@@ -788,8 +791,9 @@ act like you did.</li>
 after they're built.</li>
 
 <li id="cmdline-debug">--debug, Enables debug mode for the script.  Currently
-this means that all output will be dumped to STDOUT instead of logged in the
-log directory like normal.</li>
+this means that all output will be dumped to STDOUT in addition to being
+logged in the log directory like normal.  Also, many functions are much more
+verbose about what they're doing in debugging mode.</li>
 
 <li id="cmdline-no-rebuild-on-fail">--no-rebuild-on-fail, Don't try and
 rebuild modules that have failed building from scratch.  kdecvs-build will
@@ -852,7 +856,7 @@ href="#options">.kdecvs-buildrc options</a>.
 <div align="center" class="thankyou">
 <font size="-1"><a href="http://www.cvsup.org/">CVSup</a> is a registered trademark of John D. Polstra.
 <br/>
-Last modified: Fri Jul  2 03:13:24 2004</font>
+Last modified: Fri Jul  2 03:22:20 2004</font>
 </div>
 </body>
 </html>
