@@ -5,6 +5,7 @@ Version history: 0.75
    file.
  * Try to build modules even if one failed in the update process.
  * Added --rc-file option.
+ * Make --debug option use logging in addition to dumping to stdout.
 
 Version history: 0.74
  * Fixed bug processing command line options where --help would call the wrong
